--- a/app/assets/stylesheets/show.scss
+++ b/app/assets/stylesheets/show.scss
@@ -175,8 +175,8 @@ h3{
   padding-bottom:0;
   padding: 32px 0;
   &__buy{
-    border: 1px solid #888;
-    background: #888;
+    border: 1px solid red;
+    background:red;
     color: #fff;
     width:100%;
     line-height: 48px;
