--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -16,6 +16,12 @@
       .list-left
         .list-left__item-first
           = link_to 'カテゴリー', categories_path, class: "category-btn"
+        .category_box
+          .parents_list
+            - @parents.each do |parent|
+              = link_to "#{parent.name}",  categories_path(parent) , class: "category-parent", id: "#{parent.id}"
+          .category_list_children
+          .grand_children_list
         .list-left__item-second
           = link_to "ブランド", "#", class:"brand-btn"
       .list-right
