--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -96,7 +96,7 @@
               = render partial:"items/favoriteBtn"
               %ul
                 - if user_signed_in? && current_user.id == @item.user_id 
-                  = link_to("編集",(item_path(@item.id)),class:"item-edit-btn")
+                  = link_to("編集",(edit_item_path(@item.id)),class:"item-edit-btn")
                   = link_to("削除",item_path(@item.id),method: :delete,class:"item-delete-btn")
                   -# 非出品者には購入ボタンが表示される。
                 - elsif @item.buyer_id.present?
