--- a/app/assets/stylesheets/image.scss
+++ b/app/assets/stylesheets/image.scss
@@ -79,6 +79,36 @@
     }
   }
 
+  .label-edit-content{
+    margin-bottom: 10px;
+    .label-box {
+      display: block;
+      border: 1px dashed #ccc;
+      position: relative;
+      background: #f5f5f5;
+      width: 100%;
+      height: 162px;
+      text-align: center;
+      padding-top: 70px;
+      cursor: pointer;
+      &__text-visible {
+        position: absolute;
+        top: 50%;
+        left: 16px;
+        right: 16px;
+        text-align: center;
+        font-size: 14px;
+        line-height: 1.5;
+        font-weight: bold;
+        -webkit-transform: translate(0, -50%);
+        transform: translate(0, -50%);
+        pointer-events: none;
+        white-space: pre-wrap;
+        word-wrap: break-word;
+      }
+    }
+  }
+
   //file_fieldのcss
   .hidden-content {
     .hidden-field {
