カテゴリープルダウン
Categoryプルダウン作成
商品購入エラー解消

--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -117,7 +117,8 @@
   max-width: 660px;
   background-color: rgb(255, 255, 255);
   display: none;
-  z-index: 100;
+  z-index: 1;
+  position: relative;
 }
 
 .parents_list{
