--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -9,6 +9,19 @@
           %span.sell__image--top--right 必須
         .sell__image-second
           最大10枚までアップロードできます
+        -# = f.fields_for :images, @item.images.first do |f|
+        -#   .item__img__dropzone.clearfix
+        -#     #preview
+        -#     -# １〜５枚目プレビュー表示
+        -#     .item__img__dropzone__input
+        -#       = f.label :image, for: "upload-image" do
+        -#         .input-area
+        -#           = f.file_field :image, id: "upload-image", class: "upload-image", 'data-image': 0
+        -#         .item__img__dropzone__input__description
+        -#           .item__img__dropzone__input__description__text
+        -#             ドラッグアンドドロップ
+        -#             %br
+        -#             またはクリックしてファイルをアップロード
         .post__drop__box__container
           .prev-content
             - if @item.persisted?
@@ -21,17 +34,19 @@
                       %label.edit_btn 編集
                     .delete-box{id: "delete_btn_#{i}"}
                       %span 削除
-                -# = image_tag image, data: { index: i }, width: "100", height: '100'
-          .label-edit-content{style: "width: #{@size}px;"}
+          .label-content{style: "width: #{@size}px;"}
             %label{for: "item_images_attributes_0_image", class: "label-box", id: "label-box--0"}
               %i.fas.fa-camera
           .hidden-content
-            = f.fields_for :images do |i|
-              = i.file_field :image, class: "hidden-field"
-              %input{class:"hidden-field", type: "file", name: "item[images_attributes][1][image]", id: "item_images_attributes_1_image" }
-              %input{class:"hidden-field", type: "file", name: "item[images_attributes][2][image]", id: "item_images_attributes_2_image" }
-              %input{class:"hidden-field", type: "file", name: "item[images_attributes][3][image]", id: "item_images_attributes_3_image" }
-              %input{class:"hidden-field", type: "file", name: "item[images_attributes][4][image]", id: "item_images_attributes_4_image" }
+            -# = f.fields_for :images do |i|
+            -# - binding.pry
+            - if (@item.images.ids.length >= 1)
+              = f.fields_for :images, @item.images.first do |i|
+                = i.file_field :image, class: "hidden-field" 
+                %input{class:"hidden-field", type: "file", name: "item[images_attributes][1][image]", id: "item_images_attributes_1_image" }
+                %input{class:"hidden-field", type: "file", name: "item[images_attributes][2][image]", id: "item_images_attributes_2_image" }
+                %input{class:"hidden-field", type: "file", name: "item[images_attributes][3][image]", id: "item_images_attributes_3_image" }
+                %input{class:"hidden-field", type: "file", name: "item[images_attributes][4][image]", id: "item_images_attributes_4_image" }
       .sell__name
         .sell__name--top
           %h3.sell__name--top--left 商品名
