--- a/app/views/items/index.html.haml
+++ b/app/views/items/index.html.haml
@@ -90,7 +90,7 @@
       .pickupCategory__box__items
         .pickupCategory__box__items__item
         - @images.each do |item|
-          = link_to item_path(id: item.id) ,class: "pickupCategory__box__items__item__link" do
+          = link_to item_path(id: item.item_id) ,class: "pickupCategory__box__items__item__link" do
             .pickupCategory__box__items__item__link__img
               = image_tag item.image, class: "pickupCategory__box__items__item__link__img__up"
             .pickupCategory__box__items__item__link__body
