--- a/app/views/items/new.html.haml
+++ b/app/views/items/new.html.haml
@@ -13,7 +13,7 @@
           .prev-content
             - if @item.persisted?
               - @item.images.each_with_index do |image, i|
-                = image_tag image, data: { index: i }, width: "100", height: '100'
+                = image_tag image, data: { index: i }
           .label-content
             %label{for: "item_images_attributes_0_image", class: "label-box", id: "label-box--0"}
               %i.fas.fa-camera
