--- a/app/views/items/show.html.haml
+++ b/app/views/items/show.html.haml
@@ -38,7 +38,7 @@
                 %table.item-teble
                   %tr.main-item-imag
                     %td{align:"center", colspan:"4"}
-                      = image_tag @item.images.first.image.url, width:"560",name:"BigImage"
+                      = image_tag @item_image.image.url, width:"560",name:"BigImage"
                       -if @item.buyer_id.present?
                         .items-box_photo__soldout
                           .items-box_photo__soldout__inner
@@ -46,9 +46,9 @@
                   %tr
                     %td
                       = link_to "javascript:void(0)", onmouseover:"changeimage(gon.image.image)" do
-                        = image_tag @item.images.first.image.url,size: "147x87"
+                        = image_tag @item.images[0].image.url,size: "147x87"
                       = link_to "javascript:void(0)", onmouseover:"changeimage(gon.image.image)" do
-                        = image_tag @item.images.first.image.url,size: "147x87"
+                        = image_tag @item.images[0].image.url,size: "147x87"
                     %td
                       = link_to "javascript:void(0)", onmouseover:"changeimage(gon.image.image)" do
                         = image_tag @item.images.first.image.url,size: "147x87"
