--- a/app/assets/stylesheets/_header.scss
+++ b/app/assets/stylesheets/_header.scss
@@ -35,7 +35,6 @@
           display: flex;
           margin-bottom: 5px;
           height: 36px;
-          
           input{
             width: calc(100% - 36px);
             padding: 0 0 0 5px;
@@ -43,9 +42,10 @@
             border-style: solid;
             border-color: gray;
             border-width: 1px;
-          }
+            }
         }
-        button{
+
+        .searchbox__icon{
           cursor: pointer;
           background-color: #3ccace;
           padding: 8px;
