--- a/app/views/items/_header.html.haml
+++ b/app/views/items/_header.html.haml
@@ -4,13 +4,11 @@
       .icon
         = link_to image_tag(src= "logo.png", class: "image", size: "140x40"), root_path
       .searchbox
-        %form{"accept-charset" => "UTF-8", :action => search_items_path, :method => "get"}
-          %input{name: "utf8", type: "hidden", value: "✓"}/
-          %input.searchbox__input{name: "name", placeholder: "キーワードから探す"}
-          %button{type: "submit"}
-            .searchbox__icon
-              = image_tag "icon-search1.png", size: "19x19"
-              %input{name: "authenticity_token", type: "hidden", value: ""}
+        = search_form_for(@q, url:detailed_search_items_path) do |f|
+          = f.search_field :name_cont, placeholder: 'キーワードから探す'
+          = button_tag type: 'submit', class: "searchbox__icon" do
+            = image_tag(src= "icon-search1.png", size: "19x19",class: "button")
+          
         .item-search-result
     .header__inner__nav
       .list-left
