--- a/app/assets/stylesheets/image.scss
+++ b/app/assets/stylesheets/image.scss
@@ -83,7 +83,7 @@
   .hidden-content {
     .hidden-field {
       // display: none;
-      // visibility: hidden;
+      visibility: hidden;
       opacity: 0;
       position: absolute;
     }
