--- a/app/views/items/edit.html.haml
+++ b/app/views/items/edit.html.haml
@@ -47,9 +47,16 @@
           %h3.sell__detail--category カテゴリー
           %span.sell__detail--require 必須
         .sell__detail--selecttop
-          = f.collection_select :category_id, Category.where(ancestry: nil), :id, :name, { prompt: "選択してください" }, { class: "sell__detail--box", id: "parent_category" }
-          %svg{"aria-hidden" => "true", fill: "#888888", "fill-rule" => "evenodd", height: "24", viewbox: "0 0 24 24", width: "24"}
-            %path{ d: "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
+          -# = f.collection_select :category_id, Category.where(ancestry: nil), :id, :name, { class: "sell__detail--box", id: "parent_category" }
+          = f.select :category_id, options_for_select(Category.where(ancestry: nil).map{ |p| [p.name, p.id] }, selected: Category.find_by(id: @item.category_id).parent.parent.id), {}, { class: "sell__detail--box", id: "parent_category" }
+          -# %svg{"aria-hidden" => "true", fill: "#888888", "fill-rule" => "evenodd", height: "24", viewbox: "0 0 24 24", width: "24"}
+          -#   %path{ d: "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
+          = f.select :category_id, options_for_select(Category.find_by(id: @item.category_id).parent.parent.children.map{ |p| [p.name, p.id] }, selected: Category.find_by(id: @item.category_id).parent.id), {}, { class: "sell__detail--box", id: "child_category" }
+          -# %svg{"aria-hidden" => "true", fill: "#888888", "fill-rule" => "evenodd", height: "24", viewbox: "0 0 24 24", width: "24"}
+          -#   %path{ d: "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
+          = f.select :category_id, options_for_select(Category.find_by(id: @item.category_id).parent.children.map{ |p| [p.name, p.id] }, selected: Category.find_by(id: @item.category_id).id), {}, { class: "sell__detail--box", id: "grandchild_category" }
+          -# %svg{"aria-hidden" => "true", fill: "#888888", "fill-rule" => "evenodd", height: "24", viewbox: "0 0 24 24", width: "24"}
+          -#   %path{ d: "M12,15.66a1.73,1.73,0,0,1-1.2-.49L5.21,9.54a.7.7,0,0,1,1-1l5.62,5.62c.15.15.27.15.41,0L17.8,8.6a.71.71,0,0,1,1,0,.69.69,0,0,1,0,1l-5.57,5.58A1.71,1.71,0,0,1,12,15.66Z"}
         .sell__detail--third
           %h3.sell__detail--brand ブランド
           %span.sell__detail--any 任意
