--- a/app/assets/stylesheets/signup/signup.scss
+++ b/app/assets/stylesheets/signup/signup.scss
@@ -88,7 +88,7 @@
             }
             &__btn-google {
               margin: 16px 0 0;
-              background: #fff url(/assets/google.svg) no-repeat 3px top;
+              background-image: image-url("google.svg");
               background-size: 20px;
               background-position: 20px;
               border: #979797 solid 1px;
